# proof-producer

./: .clang-format  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  flake.nix
libs/actor/blueprint/example/: CMakeLists.txt  curves.cpp  simple_example.hpp  test_component.cpp  test_component.hpp
libs/actor/blueprint/example/plonk/: addition_component.cpp  addition_component.hpp  component_template.hpp
libs/actor/core/: .clang-format  CMakeLists.txt  LICENSE  actor.core.podspec.json  dpdk_config
libs/actor/core/cmake/: ActorConfig.cmake.in  ActorDependencies.cmake  FindConcepts.cmake  FindFMT.cmake  FindGnuTLS.cmake  FindLinuxMembarrier.cmake  FindProtobuf.cmake  FindPthreadSetName.cmake  FindSanitizers.cmake  FindStdAtomic.cmake  FindValgrind.cmake  Findc-ares.cmake  Finddpdk.cmake  Findhwloc.cmake  Findlksctp-tools.cmake  Findlz4.cmake  Findnumactl.cmake  Findragel.cmake  Findrt.cmake  Findyaml-cpp.cmake  build_config.hpp.in  dpdk_configure.cmake
libs/actor/core/cmake/code_tests/: Concepts_test.cc  Sanitizers_fiber_test.cc
libs/actor/core/include/nil/actor/core/: abort_on_ebadf.hh  abort_source.hh  alien.hh  align.hh  aligned_buffer.hh  app_template.hh  apply.hh  array_map.hh  bitops.hh  bitset-iter.hh  byteorder.hh  cacheline.hh  checked_ptr.hh  chunked_fifo.hh  circular_buffer.hh  circular_buffer_fixed_capacity.hh  condition_variable.hh  core.hh  coroutine.hh  deleter.hh  distributed.hh  do_with.hh  dpdk_rte.hh  enum.hh  exception_hacks.hh  execution_stage.hh  expiring_fifo.hh  fair_queue.hh  file-types.hh  file.hh  fsqual.hh  fstream.hh  function_traits.hh  future-util.hh  future.hh  gate.hh  idle_cpu_handler.hh  io_intent.hh  io_priority_class.hh  io_queue.hh  (+67 more)
libs/actor/core/include/nil/actor/detail/: alloc_failure_injector.hh  attribute-compat.hh  backtrace.hh  bool_class.hh  conversions.hh  critical_alloc_section.hh  defer.hh  eclipse.hh  exceptions.hh  file.hh  function_input_iterator.hh  gcc6-concepts.hh  indirect.hh  is_smart_ptr.hh  later.hh  lazy.hh  log-cli.hh  log-impl.hh  log.hh  memory_diagnostics.hh  noncopyable_function.hh  optimized_optional.hh  print_safe.hh  program-options.hh  read_first_line.hh  reference_wrapper.hh  spinlock.hh  std-compat.hh  thread_affinity.hh  tmp_file.hh  transform_iterator.hh  tuple_utils.hh  used_size.hh  variant_utils.hh
libs/actor/core/perf/: CMakeLists.txt  fair_queue_perf.cc  fstream_perf.cc  future_util_perf.cc  perf-tests.md
libs/actor/core/src/core/: alien.cc  app_template.cc  condition-variable.cc  dpdk_rte.cc  exception_hacks.cc  execution_stage.cc  fair_queue.cc  file.cc  fsqual.cc  fstream.cc  future-util.cc  future.cc  io_queue.cc  linux-aio.cc  memory.cc  metrics.cc  network_stack_registry.cc  on_internal_error.cc  posix.cc  prometheus.cc  reactor.cc  reactor_backend_aio.cc  reactor_backend_epoll.cc  reactor_backend_osv.cc  reactor_backend_selector.cc  resource.cc  scollectd.cc  semaphore.cc  sharded.cc  smp.cc  sstring.cc  systemwide_memory_barrier.cc  thread.cc  thread_pool.cc  uname.cc
libs/actor/core/src/detail/: alloc_failure_injector.cc  backtrace.cc  conversions.cc  exceptions.cc  file.cc  log.cc  program-options.cc  read_first_line.cc  tmp_file.cc
libs/actor/core/test/: CMakeLists.txt  abort_source_test.cc  alien_test.cc  alloc_test.cc  allocator_test.cc  checked_ptr_test.cc  chunked_fifo_test.cc  circular_buffer_fixed_capacity_test.cc  circular_buffer_test.cc  coroutines_test.cc  defer_test.cc  deleter_test.cc  directory_test.cc  distributed_test.cc  execution_stage_test.cc  expiring_fifo_test.cc  fair_queue_test.cc  file_io_test.cc  file_utils_test.cc  foreign_ptr_test.cc  fstream_test.cc  futures_test.cc  io_queue_test.cc  locking_test.cc  log_buf_test.cc  lowres_clock_test.cc  metrics_test.cc  noncopyable_function_test.cc  program_options_test.cc  queue_test.cc  scheduling_group_test.cc  semaphore_test.cc  sharded_test.cc  shared_ptr_test.cc  signal_test.cc  simple_stream_test.cc  slab_test.cc  smp_test.cc  sstring_test.cc  stall_detector_test.cc  (+8 more)
libs/actor/network/: .gitignore  CMakeLists.txt  LICENSE  actor.network.podspec.json
libs/actor/network/cmake/: ActorConfig.cmake.in  ActorDependencies.cmake  FindGnuTLS.cmake  FindLinuxMembarrier.cmake  FindPthreadSetName.cmake  FindSanitizers.cmake  FindStdAtomic.cmake  FindValgrind.cmake  Findc-ares.cmake  Finddpdk.cmake  Findhwloc.cmake  Findlksctp-tools.cmake  Findlz4.cmake  Findnumactl.cmake  Findragel.cmake  Findrt.cmake  Findyaml-cpp.cmake  dpdk_configure.cmake
libs/actor/network/include/nil/actor/: metrics2.hh
libs/actor/network/include/nil/actor/http/: api_docs.hh  common.hh  exception.hh  file_handler.hh  function_handlers.hh  handlers.hh  httpd.hh  json_path.hh  matcher.hh  matchrules.hh  mime_types.hh  reply.hh  request.hh  request_parser.hh  (+3 more)
libs/actor/network/perf/: CMakeLists.txt  perf-tests.md  perf_tests.cc  rpc_perf.cc
libs/actor/network/src/: metrics2.cc
libs/actor/network/src/http/: api_docs.cc  common.cc  file_handler.cc  httpd.cc  json_path.cc  matcher.cc  mime_types.cc  reply.cc  request_parser.rl  response_parser.rl  routes.cc  transformers.cc
libs/actor/network/src/json/: formatter.cc  json_elements.cc
libs/actor/network/src/network/: arp.cc  config.cc  dhcp.cc  dns.cc  dpdk.cc  ethernet.cc  inet_address.cc  ip.cc  ip_checksum.cc  native-stack.cc  net.cc  packet.cc  posix-stack.cc  proxy.cc  socket_address.cc  stack.cc  tcp.cc  tls.cc  udp.cc  unix_address.cc  virtio.cc
libs/actor/network/src/rpc/: lz4_compressor.cc  lz4_fragmented_compressor.cc  rpc.cc
libs/actor/network/test/: CMakeLists.txt  connect_test.cc  dns_test.cc  httpd_test.cc  ipv6_test.cc  json_formatter_test.cc  loopback_socket.hh  mock_file.hh  net_config_test.cc  network_interface_test.cc  output_stream_test.cc  packet_test.cc  request_parser_test.cc  rpc_test.cc  socket_test.cc  tls_test.cc  tmpdir.hh  unix_domain_test.cc
proof-producer/: CMakeLists.txt  flake.nix
proof-producer/.github/workflows/: pull_request.yml  reusable-generate-proofs-linux.yml
proof-producer/tests/: make_proof_for_pairs.sh
(+868 files in other folders)
